--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithubIssues</string>
+    <string name="organisation_name">Organisation Name</string>
+    <string name="fetch_issues">Fetch Issues</string>
+    <string name="repository_name">Repository Name</string>
 </resources>
